# deepthon_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: base_config.yaml
configs/: basic_structure.yaml  breast_cancer.yaml  config.yaml  mnist.yaml
runs/run_20260107_145417/: checkpoint.pkl  history.json
runs/run_20260107_150133/: history.json
runs/turbines_experiment/: best_model.pkl  checkpoint.pkl  last_model.pkl  test_results.json
src/deepthon_pipeline/cli/: commands.py  main.py
src/deepthon_pipeline/config/: loader.py
src/deepthon_pipeline/data/: base.py  datasets.py  loader.py  loaders.py  preprocessing.py  registry.py  splits.py
src/deepthon_pipeline/data/datasets/: base.py  breast_cancer.py  mnist.py
src/deepthon_pipeline/data/transforms/: mnist.py
src/deepthon_pipeline/models/: builder.py  builders.py  optimizer_builder.py  registry.py
src/deepthon_pipeline/training/: checkpoints.py  runner.py
src/deepthon_pipeline/ui/: app.py
src/deepthon_pipeline/utils/: config.py  logging.py
src/pipeline/: data_utils.py
src/pipeline/io/: loaders.py
src/utils/: config_parser.py
tests/: test_loading.py
